# arduLogger

./: .gitignore  README.md
host/: CMakeLists.txt  ids.xml  main.cpp
host/gui/Interface_Logger/: IHM_Logger.cpp  IHM_Logger.h  IHM_Logger.ui  settingsdialog.cpp  settingsdialog.h
host/includes/: Logger.h  ansiColors.h
host/lib/: CMakeLists.txt
host/lib/pugixml/scripts/: CMakeLists.txt
host/src/: Logger.cpp  ansiColors.cpp
